--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cyntler/react-doc-viewer",
+  "name": "react-doc-viewer",
   "version": "1.17.0",
   "description": "File viewer for React.",
   "author": "Matthew Mogford / Damian Cyntler",
